<resources>
    <string name="app_name">Лабораторна робота №3 (варіант 3)</string>
    <string name="author">Написав: Варченко Євгеній, студент групи ІО-93</string>
    <string name="enter_text">Enter text</string>
    <string name="select_font">Select a font:</string>
    <string name="sans_serif">Sans Serif</string>
    <string name="sans_serif_black">Sans Serif Black</string>
    <string name="serif">Serif</string>
    <string name="monospace">Monospace</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="open">Open</string>
</resources>