<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".InputFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

        <TextView
                android:id="@+id/authorTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/author"
                android:textColor="#000000"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <EditText
                android:id="@+id/enterTextEditText"
                android:layout_width="307dp"
                android:layout_height="43dp"
                android:layout_marginTop="28dp"
                android:ems="10"
                android:hint="@string/enter_text"
                android:inputType="textPersonName"
                android:importantForAutofill="no"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/authorTextView"/>

        <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="299dp"
                android:layout_height="232dp"
                android:layout_marginTop="35dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/enterTextEditText">

            <TextView
                    android:id="@+id/selectFontTextView"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/select_font"
                    android:textSize="16sp"
                    android:textColor="#000000"/>

            <RadioButton
                    android:id="@+id/radioButton0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/sans_serif"
                    android:textSize="16sp"
                    android:fontFamily="sans-serif"/>

            <RadioButton
                    android:id="@+id/radioButton1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sans_serif_black"
                    android:textSize="16sp"
                    android:fontFamily="sans-serif-black"/>
            <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/serif"
                    android:textSize="16sp"
                    android:fontFamily="serif"/>

            <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/monospace"
                    android:textSize="18sp"
                    android:fontFamily="monospace"/>
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="4">

        <Button
                android:id="@+id/okButton"
                android:layout_width="100dp"
                android:layout_height="58dp"
                android:layout_marginEnd="7dp"
                android:text="@string/ok"/>
        <Button
                android:id="@+id/cancelButton"
                android:layout_width="100dp"
                android:layout_height="58dp"
                android:layout_marginStart="7dp"
                android:layout_marginEnd="7dp"
                android:text="@string/cancel"/>

        <Button
                android:id="@+id/openButton"
                android:layout_width="100dp"
                android:layout_height="58dp"
                android:layout_marginStart="7dp"
                android:text="@string/open"/>
    </LinearLayout>
</LinearLayout>
